--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
     "firebase": "^11.6.0",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
   }
 }
